--- a/src/app/setting/profile/profile.component.html
+++ b/src/app/setting/profile/profile.component.html
@@ -1,4 +1,6 @@
-<div class="main main-hub p-3">
+<app-loader [type]="'page'" *ngIf="loading"></app-loader>
+
+<div class="main main-hub p-3" *ngIf="!loading && usrInfo">
   <h3 class="mb-4 clearfix heading">
     Profile
   </h3>
@@ -15,19 +17,19 @@
           <div class="card-body">
             <div class="row px-4 my-1">
               <div class="col font-weight-bold">Name</div>
-              <div class="col">Your Name</div>
+              <div class="col">{{usrInfo.name}}</div>
             </div>
             <div class="row px-4 my-1">
               <div class="col font-weight-bold">Email</div>
-              <div class="col">Your Email</div>
+              <div class="col">{{usrInfo.email||'N/A'}}</div>
             </div>
             <div class="row px-4 my-1">
               <div class="col font-weight-bold">Language</div>
-              <div class="col">Your Language</div>
+              <div class="col">{{usrInfo.languageId && lngs[usrInfo.languageId]?lngs[usrInfo.languageId]:'N/A'}}</div>
             </div>
             <div class="row px-4 my-1">
               <div class="col font-weight-bold">Time Zone</div>
-              <div class="col">Your Time Zone</div>
+              <div class="col">{{usrInfo.timeZone||'N/A'}}</div>
             </div>
           </div>
         </div>
@@ -60,37 +62,40 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <form name="profileForm" (ngSubmit)="updProfile()" [formGroup]="profileForm" novalidate>
+  <form name="profForm" (ngSubmit)="updProfile()" [formGroup]="profForm" novalidate>
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>First Name</mat-label>
         <input matInput type="text" placeholder="First Name" formControlName="firstName" required>
-        <mat-error *ngIf="profileForm.get('firstName')!.hasError('required')">>
+        <mat-error *ngIf="profForm.get('firstName')!.hasError('required')">>
           First Name is required
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Last Name</mat-label>
         <input matInput type="text" placeholder="Last Name" formControlName="lastName" required>
-        <mat-error *ngIf="profileForm.get('lastName')!.hasError('required')">
+        <mat-error *ngIf="profForm.get('lastName')!.hasError('required')">
           Last Name is required
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Email</mat-label>
         <input matInput type="text" placeholder="Email" formControlName="email" required>
-        <mat-error *ngIf="profileForm.get('email')!.hasError('required')">>
+        <mat-error *ngIf="profForm.get('email')!.hasError('required')">
           Email required
         </mat-error>
-        <mat-error *ngIf="!profileForm.get('email')!.hasError('required') && profileForm.get('email')!.hasError('invalidEmail')">
+        <mat-error *ngIf="!profForm.get('email')!.hasError('required') && profForm.get('email')!.hasError('invalidEmail')">
           Please enter a valid email address
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Language</mat-label>
-        <mat-select formControlName="language">
-          <mat-option value="abc">Abc</mat-option>
+        <mat-select formControlName="languageId" required>
+          <mat-option *ngFor="let lng of lngArr" [value]="lng.v">{{lng.n}}</mat-option>
         </mat-select>
+        <mat-error *ngIf="profForm.get('languageId')!.hasError('required')">
+          Last Name is required
+        </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Time Zone</mat-label>
@@ -100,8 +105,8 @@
       </mat-form-field>
     </div>
     <div class="modal-footer">
-      <button class="btn btn-primary" [disabled]="profileForm!.invalid || profLoading">
-        <app-loader [type]="'btn'" *ngIf="profLoading"></app-loader> <!-- loader -->
+      <button class="btn btn-primary" [disabled]="profForm!.invalid || profLoading">
+        <app-loader [type]="'btn'" *ngIf="profLoading"></app-loader>
         Update Profile
       </button>
     </div>
