--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -146,8 +146,8 @@
       </div>
     </div>
     <div class="workspace w-100 col-md-4" *ngIf="showRowInfo">
-      <!-- <app-loader [type]="'page'" *ngIf="docLoading"></app-loader> -->
-      <div class="doc" *ngIf="rowInfo">
+      <app-loader [type]="'page'" *ngIf="docLoading"></app-loader>
+      <div class="doc" *ngIf="!docLoading">
         <div class="card">
           <div class="card-header row m-0">
             <h5 class="mb-0 pl-0 align-self-center">{{rowInfo.name}}</h5>
