hub page loader, ui fixes in modal, and deact class style

--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -1,4 +1,6 @@
-<div class="main main-hub p-3" *ngIf="hubInfo">
+<app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
+
+<div class="main main-hub p-3" *ngIf="hubInfo && !loading">
   <h3 class="mb-4 clearfix heading">
     {{hubInfo.name}}
   </h3>
