--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -28,7 +28,7 @@
 <div class="card-footer row justify-content-between mx-0">
   <div class="pages">
     <mat-form-field appearance="outline" class="mr-2">
-      <mat-select [(ngModel)]="pageSize" (selectionChange)="pageSizeChangeFunc()">
+      <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
         <mat-option [value]="lP" *ngFor="let lP of lmtPage">{{lP}}</mat-option>
       </mat-select>
     </mat-form-field>
