--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,7 +1,8 @@
 <div class="users-section">
   <div class="buttons-row row mt-3 justify-content-between mx-2">
     <div class="dropdown">
-      <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
         Add
       </button>
       <div class="dropdown-menu" aria-labelledby="addCOntentDD">
@@ -131,7 +132,8 @@
             <div class="doc-details in-groups border-bottom mb-3 pb-3">
               <div class="heading text-hi-dark-grey font-weight-bold">In Groups</div>
               <div class="value mt-2">
-                <ul class="list-unstyled mb-0" *ngIf="rowInfo.employeeGroups && rowInfo.employeeGroups.length>0 else noGrp">
+                <ul class="list-unstyled mb-0"
+                  *ngIf="rowInfo.employeeGroups && rowInfo.employeeGroups.length>0 else noGrp">
                   <li *ngFor="let empGrp of rowInfo.employeeGroups">{{empGrp.groupName}}</li>
                 </ul>
                 <ng-template #noGrp>No Group</ng-template>
@@ -165,7 +167,8 @@
               <div class="created">
                 <label class="text-hi-dark-grey mb-0 mt-2">Created</label>
                 <div class="value">
-                  {{rowInfo.lastLoginTimestamp}} <!-- create time -->
+                  {{rowInfo.lastLoginTimestamp}}
+                  <!-- create time -->
                 </div>
               </div>
               <div class="last-login">
@@ -208,7 +211,8 @@
       <div class="search col-lg-8 col-sm-7">
         <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
           <i matPrefix class="fas fa-search"></i>
-          <input matInput placeholder="Search ..." autocomplete="disabled" [(ngModel)]="searchTxt" (ngModelChange)='searchTxtChng.next($event)'>
+          <input matInput placeholder="Search ..." autocomplete="disabled" [(ngModel)]="searchTxt"
+            (ngModelChange)='searchTxtChng.next($event)'>
           <div matSuffix class="curs-ptr">
             <i class="fas fa-sliders-h"></i>
           </div>
@@ -228,7 +232,8 @@
             <div class="cog dropdown-menu dropdown-menu-right" #cogDropDown>
               <div class="scrollable">
                 <span class="ml-2 heading">Visible Columns</span>
-                <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
+                <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols"
+                  class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
                   <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index" cdkDrag>
                     <span class="ellipsis mr-2">
                       <i class="fa fa-ellipsis-v"></i>
@@ -241,7 +246,9 @@
                   </span>
                 </ul>
                 <span class="ml-2 heading">Hidden Columns</span>
-                <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
+                <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols"
+                  class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]"
+                  (cdkDropListDropped)="drop($event)">
                   <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index" cdkDrag>
                     <span class="ellipsis mr-2 mb-1">
                       <i class="fa fa-ellipsis-v"></i>
@@ -275,7 +282,8 @@
           <tr>
             <th class="curs-ptr" *ngFor="let col of cols;let i =index" (click)="sortChange(col,i)">
               {{col.n}}
-              <i class="ml-1 fas" [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
+              <i class="ml-1 fas"
+                [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
             </th>
           </tr>
         </thead>
@@ -365,81 +373,94 @@
   </div>
   <form name="usrForm" (ngSubmit)="onSubmit()" [formGroup]="usrForm" novalidate>
     <div class="modal-body">
-      <div class="row justify-content-between m-0">
-        <mat-form-field appearance="outline">
-          <mat-label>First Name</mat-label>
-          <input matInput type="text" placeholder="First Name" formControlName="firstName" required>
-          <mat-error *ngIf="usrForm.get('firstName')!.hasError('required')">
-            First Name is required
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Last Name</mat-label>
-          <input matInput type="text" placeholder="Last Name" formControlName="lastName" required>
-          <mat-error *ngIf="usrForm.get('lastName')!.hasError('required')">
-            Last Name is required
-          </mat-error>
-        </mat-form-field>
+      <div class="row justify-content-between">
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>First Name</mat-label>
+            <input matInput type="text" placeholder="First Name" formControlName="firstName" required>
+            <mat-error *ngIf="usrForm.get('firstName')!.hasError('required')">
+              First Name is required
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Last Name</mat-label>
+            <input matInput type="text" placeholder="Last Name" formControlName="lastName" required>
+            <mat-error *ngIf="usrForm.get('lastName')!.hasError('required')">
+              Last Name is required
+            </mat-error>
+          </mat-form-field>
+        </div>
       </div>
-      <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input matInput type="text" placeholder="Email" formControlName="email" required>
-        <mat-error *ngIf="usrForm.get('email')!.hasError('required')">
-          Email is required
-        </mat-error>
-        <mat-error *ngIf="!usrForm.get('email')!.hasError('required') && usrForm.get('email')!.hasError('invalidEmail')">
-          Please enter a valid email address
-        </mat-error>
-      </mat-form-field>
-      <div class="row justify-content-between m-0">
-        <mat-form-field appearance="outline">
-          <mat-label>Language</mat-label>
-          <mat-select formControlName="languageId" required>
-            <mat-option *ngFor="let lng of lngArr" [value]="lng.v">{{lng.n}}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="usrForm.get('languageId')!.hasError('required')">
-            Language is required
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Time Zone</mat-label>
-          <mat-select>
-            <mat-option value="company-timezone">Company Timezone</mat-option>
-          </mat-select>
-        </mat-form-field>
+      <div class="row">
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Email</mat-label>
+            <input matInput type="text" placeholder="Email" formControlName="email" required>
+            <mat-error *ngIf="usrForm.get('email')!.hasError('required')">
+              Email is required
+            </mat-error>
+            <mat-error
+              *ngIf="!usrForm.get('email')!.hasError('required') && usrForm.get('email')!.hasError('invalidEmail')">
+              Please enter a valid email address
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row justify-content-between">
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Language</mat-label>
+            <mat-select formControlName="languageId" required>
+              <mat-option *ngFor="let lng of lngArr" [value]="lng.v">{{lng.n}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="usrForm.get('languageId')!.hasError('required')">
+              Language is required
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Time Zone</mat-label>
+            <mat-select>
+              <mat-option value="company-timezone">Company Timezone</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
       <div class="border w-100 mb-4"></div>
-      <div class="row justify-content-between m-0">
-        <mat-form-field appearance="outline">
-          <mat-label>Role</mat-label>
-          <mat-select formControlName="roleId" required>
-            <mat-option *ngFor="let r of rolesArr" [value]="r.v">{{r.n}}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="usrForm.get('roleId')!.hasError('required')">
-            Role is required
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-chip-list #chipList aria-label="User's Groups *">
-              <mat-chip
-              *ngFor="let d of selGrps"
-              [selectable]="selectable"
-              [removable]="removable"
-              (removed)="remove(d)">
-              {{d.name}}
+      <div class="row justify-content-between">
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Role</mat-label>
+            <mat-select formControlName="roleId" required>
+              <mat-option *ngFor="let r of rolesArr" [value]="r.v">{{r.n}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="usrForm.get('roleId')!.hasError('required')">
+              Role is required
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-chip-list #chipList aria-label="User's Groups *">
+              <mat-chip *ngFor="let d of selGrps" [selectable]="selectable" [removable]="removable"
+                (removed)="remove(d)">
+                {{d.name}}
                 <i matChipRemove class="fas fa-times-circle" *ngIf="removable"></i>
               </mat-chip>
-              <input #usrGrp
-                matInput formControlName="group"
-                placeholder="Add User Group *"
-                [matAutocomplete]="auto"><!-- (matChipInputTokenEnd)="add($event)" -->
-          </mat-chip-list>
-          <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selGrpIds($event.option.value)" [displayWith]="displayFn">
+              <input #usrGrp matInput formControlName="group" placeholder="Add User Group *" [matAutocomplete]="auto">
+              <!-- (matChipInputTokenEnd)="add($event)" -->
+            </mat-chip-list>
+            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selGrpIds($event.option.value)"
+              [displayWith]="displayFn">
               <mat-option *ngFor="let grp of grps" [value]="grp">
-                  {{grp.name}}
+                {{grp.name}}
               </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
+            </mat-autocomplete>
+          </mat-form-field>
+        </div>
       </div>
       <!-- <div>
         <mat-label>Product Licenses</mat-label>
@@ -451,8 +472,10 @@
       </div>
       <div *ngIf="!isEdit">
         <mat-label>Password</mat-label>
-        <mat-radio-group class="d-block ml-3" aria-label="Select an option" formControlName="specifyPassword" (change)="togglePassword($event)">
-          <mat-radio-button [value]="false"> Let user choose password upon account confirmation</mat-radio-button>
+        <mat-radio-group class="d-block ml-3" aria-label="Select an option" formControlName="specifyPassword"
+          (change)="togglePassword($event)">
+          <mat-radio-button [value]="false" class="mr-3"> Let user choose password upon account confirmation
+          </mat-radio-button>
           <mat-radio-button [value]="true">Specify password</mat-radio-button>
         </mat-radio-group>
         <mat-form-field class="d-block w-50 mx-auto" appearance="outline" *ngIf="usrForm.controls.password">
@@ -463,8 +486,10 @@
           </mat-error>
         </mat-form-field>
         <div class="ml-3">
-          <mat-checkbox class="ml-3 d-block" formControlName="sendLoginInstructionEmail">Send me email with login instructions</mat-checkbox>
-          <mat-checkbox class="ml-3 d-block" formControlName="enforceEmployeePasswordReset">Enforce user to reset password on first login</mat-checkbox>
+          <mat-checkbox class="ml-3 d-block" formControlName="sendLoginInstructionEmail">Send me email with login
+            instructions</mat-checkbox>
+          <mat-checkbox class="ml-3 d-block" formControlName="enforceEmployeePasswordReset">Enforce user to reset
+            password on first login</mat-checkbox>
         </div>
       </div>
     </div>
