--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -120,7 +120,9 @@
                 No Group found
               </div>
             </div>
-            <div class="card-footer row justify-content-between mx-0">
+            <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
+              (pageSizeChange)="pageSizeChange($event)" (paginationNum)="paginationNum($event)"></app-pagination>
+            <!-- <div class="card-footer row justify-content-between mx-0">
               <div class="pages">
                 <mat-form-field appearance="outline" class="mr-2">
                   <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
@@ -142,7 +144,7 @@
                   <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
