--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -308,7 +308,9 @@
         No User found
       </div>
     </div>
-    <div class="card-footer row justify-content-between mx-0">
+    <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
+      (pageSizeChange)="pageSizeChange($event)" (paginationNum)="paginationNum($event)"></app-pagination>
+    <!-- <div class="card-footer row justify-content-between mx-0">
       <div class="pages">
         <mat-form-field appearance="outline" class="mr-2">
           <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
@@ -330,7 +332,7 @@
           <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
         </li>
       </ul>
-    </div>
+    </div> -->
   </div>
 </ng-template>
 <!-- send invitation modal  -->
