--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -667,8 +667,7 @@
 
           </div>
           <ng-container *ngIf="selWrkspc; else noWrkspc">
-            <app-loader [type]="'page'" *ngIf="folderLoading"></app-loader>
-            <div class="card-body" *ngIf="!folderLoading">
+            <div class="card-body">
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-white mb-0 p-0">
                   <li class="breadcrumb-item curs-ptr text-primary" (click)="backFolder()" style="font-size: 16px;"
@@ -677,45 +676,56 @@
                   <li class="breadcrumb-item" *ngFor="let folNav of folderNav">{{folNav.name}}</li>
                 </ol>
               </nav>
-              <hr>
-              <div class="main row py-4" *ngIf="folderArr.length > 0">
+              <ul ngbNav #fldrNav="ngbNav" [(activeId)]="activeFldrs"
+                class="nav-tabs justify-content-end border-bottom-0 mr-3 w-100" (activeIdChange)="changeDispFldrs()">
+                <li [ngbNavItem]="1">
+                  <a ngbNavLink>Active</a>
+                </li>
+                <li [ngbNavItem]="2">
+                  <a ngbNavLink>Disabled</a>
+                </li>
+              </ul>
+              <hr class="mt-0">
+              <app-loader [type]="'page'" *ngIf="folderLoading"></app-loader>
+              <div class="main row py-4" *ngIf="folderArr.length > 0 && !folderLoading">
                 <div class="col-3 curs-ptr my-2" *ngFor="let folder of folderArr">
-                  <div (click)="changeFolder(folder)">
+                  <div>
                     <div class="image">
-                      <img src="{{folder.folderIconPath ? folder.folderIconPath : 'assets/images/folderIcon.png'}}">
+                      <img src="{{folder.folderIconPath ? folder.folderIconPath : 'assets/images/folderIcon.png'}}"
+                        (click)="changeFolder(folder)">
+                      <div class="dropdown" style="z-index:1;">
+                        <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="comInfoDD"
+                          data-toggle="dropdown">
+                          <i class="fas fa-cog"></i>
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="comInfoDD">
+                          <a class="dropdown-item curs-ptr"
+                            (click)="openFolderModal(folder.key=='fldr' ? folderModal : smartFolderModal, 'edit', folder)">
+                            <i class="fas fa-edit mr-1"></i>Edit Item</a>
+                          <a class="dropdown-item" href="javascript:void(0)">
+                            <i class="fas fa-clone mr-1"></i>Duplicate Folder</a>
+                          <a class="dropdown-item" href="javascript:void(0)">
+                            <i class="fas fa-link mr-1"></i>App Link</a>
+                          <a class="dropdown-item curs-ptr" (click)="activateFldr(folder)" *ngIf="!folder.isActive">
+                            <i class="fas fa-plus mr-1"></i>Activate {{folder.key != 'fldr' ? 'Smart' : ''}} Folder</a>
+                          <a class="dropdown-item curs-ptr text-primary" (click)="deActivateFldr(folder)"
+                            *ngIf="folder.isActive">
+                            <i class="fas fa-trash-alt mr-1"></i>Deactivate {{folder.key != 'fldr' ? 'Smart' : ''}}
+                            Folder</a>
+                          <a class="dropdown-item" href="javascript:void(0)">
+                            <i class="fas fa-folder-plus mr-1"></i>Create New Channel from Folder</a>
+                        </div>
+                      </div>
                     </div>
                     <div class="name bg-hi-dark-grey text-center rounded mt-2 px-2 text-truncate"
-                      *ngIf="!folder.hideLabelInWorkspace">
+                      *ngIf="!folder.hideLabelInWorkspace" (click)="changeFolder(folder)">
                       {{folder.name}}
-                    </div>
-                  </div>
-                  <div class="dropdown">
-                    <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="comInfoDD"
-                      data-toggle="dropdown">
-                      <i class="fas fa-cog"></i>
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="comInfoDD">
-                      <a class="dropdown-item curs-ptr"
-                        (click)="openFolderModal(folder.key=='fldr' ? folderModal : smartFolderModal, 'edit', folder)">
-                        <i class="fas fa-edit mr-1"></i>Edit Item</a>
-                      <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fas fa-clone mr-1"></i>Duplicate Folder</a>
-                      <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fas fa-link mr-1"></i>App Link</a>
-                      <a class="dropdown-item curs-ptr" (click)="activateFldr(folder)" *ngIf="!folder.isActive">
-                        <i class="fas fa-plus mr-1"></i>Activate {{folder.key != 'fldr' ? 'Smart' : ''}} Folder</a>
-                      <a class="dropdown-item curs-ptr text-primary" (click)="deActivateFldr(folder)"
-                        *ngIf="folder.isActive">
-                        <i class="fas fa-trash-alt mr-1"></i>Deactivate {{folder.key != 'fldr' ? 'Smart' : ''}}
-                        Folder</a>
-                      <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fas fa-folder-plus mr-1"></i>Create New Channel from Folder</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="text-center text-secondary" style="min-height: 103px; padding-top:45px;"
-                *ngIf="folderArr.length == 0">
+                *ngIf="folderArr.length == 0 && !folderLoading">
                 No folder found
               </div>
             </div>
