--- a/src/app/hub/content-workspace/content-workspace.component.scss
+++ b/src/app/hub/content-workspace/content-workspace.component.scss
@@ -32,3 +32,29 @@
     }
   }
 }
+
+.modal-body {
+  .image {
+    position: relative;
+    width: fit-content;
+
+    img {
+      height: 130px;
+      width: auto;
+    }
+
+    .del-btn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+    }
+  }
+
+  .image:hover {
+    .del-btn {
+      opacity: 1;
+    }
+  }
+}
